--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ PyQt5
 pandas
 numpy
 matplotlib
-#git+git://github.com:KatherLab/deepmed.git@8d4629de9e4f215432ccc36329cdaffb43d70f5f
+git+git://github.com/KatherLab/deepmed.git@0.8.0rc#egg=deepmed-katherlab
