--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,5 @@ PyQt5
 pandas
 numpy
 matplotlib
-git+https://github.com/KatherLab/deepmed.git@0.8#egg=deepmed-katherlab
-torch==1.9.1+cu102  -f https://download.pytorch.org/whl/torch_stable.html
-torchvision==0.10.1+cu102  -f https://download.pytorch.org/whl/torch_stable.html
-torchaudio===0.9.1 -f https://download.pytorch.org/whl/torch_stable.html
+git+https://github.com/KatherLab/deepmed.git@0.8.7#egg=deepmed-katherlab
+pip3 install torch==1.10.1+cu102 torchvision==0.11.2+cu102 torchaudio===0.10.1+cu102 -f https://download.pytorch.org/whl/cu102/torch_stable.html
